WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259016
AX: When isolated tree mode is enabled, we should never eagerly spellcheck (except for testing)
https://bugs.webkit.org/show_bug.cgi?id=259016
Summary
AX: When isolated tree mode is enabled, we should never eagerly spellcheck (e...
Tyler Wilcock
Reported
2023-07-08 12:32:05 PDT
In
https://bugs.webkit.org/show_bug.cgi?id=256629
, we added the ability to defer spellchecking when the requesting client is VoiceOver. This works well when isolated tree mode is disabled, since the only time we would decide whether to eagerly spellcheck or not would be in direct response to an assistive technology request. However, isolated tree mode does work to update the tree outside of direct AT requests (e.g. from AXObjectCache::performDeferredCacheUpdate), meaning _AXGetClientForCurrentRequestUntrusted is not set. In turn, this means we eagerly spellcheck when caching attributed strings, which is a huge performance hit.
Attachments
Patch
(3.42 KB, patch)
2023-07-08 12:35 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(4.04 KB, patch)
2023-07-08 14:13 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-08 12:32:16 PDT
<
rdar://problem/111958889
>
Tyler Wilcock
Comment 2
2023-07-08 12:35:58 PDT
Created
attachment 466988
[details]
Patch
Tyler Wilcock
Comment 3
2023-07-08 14:13:06 PDT
Created
attachment 466989
[details]
Patch
EWS
Comment 4
2023-07-08 16:42:17 PDT
Committed
265883@main
(b19f7742cb0c): <
https://commits.webkit.org/265883@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466989
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug